{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 140,
  "lineage": "4c275278-db66-adc7-a2ed-ba0a84662c3c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d3b3274b6c5d4aa",
            "arn": "arn:aws:ec2:us-east-1:397683539968:instance/i-085b081484f8de351",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085b081484f8de351",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-069eff2a41045199d",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-3-236-65-71.compute-1.amazonaws.com",
            "public_ip": "3.236.65.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b3ef15914eae6e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044d8bd644b3e36fc",
            "tags": {
              "Name": "project-docker-terr"
            },
            "tags_all": {
              "Name": "project-docker-terr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c421d858e1a035f"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_security_group.sg",
            "aws_subnet.sub1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397683539968:internet-gateway/igw-0f33a37e1477d553e",
            "id": "igw-0f33a37e1477d553e",
            "owner_id": "397683539968",
            "tags": {
              "Name": "project-gateway"
            },
            "tags_all": {
              "Name": "project-gateway"
            },
            "vpc_id": "vpc-081c51cb0f00c2020"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397683539968:route-table/rtb-096fe01f252fbce1a",
            "id": "rtb-096fe01f252fbce1a",
            "owner_id": "397683539968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f33a37e1477d553e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-rt"
            },
            "tags_all": {
              "Name": "project-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-081c51cb0f00c2020"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025ca104896d4a3b3",
            "route_table_id": "rtb-096fe01f252fbce1a",
            "subnet_id": "subnet-044d8bd644b3e36fc"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.table",
            "aws_subnet.sub1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397683539968:security-group/sg-06c421d858e1a035f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c421d858e1a035f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "397683539968",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-sg"
            },
            "tags_all": {
              "Name": "project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081c51cb0f00c2020"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397683539968:subnet/subnet-044d8bd644b3e36fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044d8bd644b3e36fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "397683539968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-sub-terr"
            },
            "tags_all": {
              "Name": "project-sub-terr"
            },
            "vpc_id": "vpc-081c51cb0f00c2020"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397683539968:vpc/vpc-081c51cb0f00c2020",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbeb8af21f50c0dc",
            "default_route_table_id": "rtb-0fb5fe776a04de7e1",
            "default_security_group_id": "sg-045e86768163eff55",
            "dhcp_options_id": "dopt-06446897da90cf29c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-081c51cb0f00c2020",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb5fe776a04de7e1",
            "owner_id": "397683539968",
            "tags": {
              "Name": "project-vpc-terr"
            },
            "tags_all": {
              "Name": "project-vpc-terr"
            }
          }
        }
      ]
    }
  ]
}